Pagina de Visualização do Livro
Não está completado ainda

--- a/html/view_book_pag.html
+++ b/html/view_book_pag.html
@@ -48,6 +48,49 @@
 
             
 
+                <section style="display: flex; flex-direction: column; height: 100vh; justify-content: space-around; margin-top: -60px; margin-left: 55px;">
+                    <div>
+                        <h2>Visualização do Livro</h2>
+                        <div style="display: flex; flex-direction: row;">
+                            <img src="/fotos/view book/image 18.png" height="100px">
+                            <div style="display: flex; flex-direction: column;">
+                                <h3>Livro de Fantasia</h3>
+                                <div class="outro">
+                                    <p>Proprietario do livro:</p>
+                                    <img src="/fotos/view book/image 19.png" height="20px">
+                                    <p>José da Silva</p>
+                                </div>
+
+                                <div class="outro">
+                                    <p>Localização do Dono:</p>
+                                    <img src="/fotos/view book/image 21.png" height="20px">
+                                    <p>Patos - PB</p>
+                                </div>
+
+                                <div class="outro">
+                                    <p>Condição do livro:</p>
+                                    <p style="color: green;">Desocupado</p>
+                                </div>
+
+                                <div class="outro">
+                                    <p>Sintuação do Livro:</p>
+                                    <p style="color: green;">Bom</p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div style="display: flex; flex-direction: column;">
+                            <h3>Sinopse do livro:</h3>
+                            <p>Quando uma escuridão ancestral ameaça engolir o reino, Lyra descobre ser a chave para uma profecia esquecida.</p>
+                            <p>Fugindo de inimigos invisíveis e segredos enterrados, ela deve decidir se será a salvação de Viridiana — ou sua ruína.</p>
+                        </div>
+                    </div>
+                    <a href="/html/pagina_inicial.html">
+                        <img src="/fotos/view book/Frame 24.png" height="60px">
+                    </a>
+                </section>
+
+
         </div>
     </div>
 </body>
