--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <h1>Sejam, Bem vindos</h1>
 <a href="html/pagina_inicial.html">Link para a página principal</a>
+
+<a href="https://www.figma.com/design/LwEVYRYMsNBv1SnfTsnUKT/Bookshare?node-id=0-1&t=MJJpEQUJ555A8XCz-1">Figma do meu projeto</a>
