--- a/html/pagina_inicial.html
+++ b/html/pagina_inicial.html
@@ -43,7 +43,9 @@
         </div>
 
         <div>
-            <img src="/fotos/sidebar/Group 8.png" alt="Cadastrar um livro">
+            <a href="/html/cadastrar_livro.html">
+                <img src="/fotos/sidebar/Group 8.png" alt="Cadastrar um livro">
+            </a>
         </div>
     </div>
     <div class="Content">
