--- a/html/cadastrar_livro.html
+++ b/html/cadastrar_livro.html
@@ -94,9 +94,15 @@
                             <textarea placeholder="Digite a Sinopse do livro"></textarea>
                         </div>
                     </div>
-                    <a href="/html/pagina_inicial.html">
-                        <img src="/fotos/view book/Frame 24.png" height="60px">
-                    </a>
+                    <div>
+                        <a href="/html/pagina_inicial.html">
+                            <img src="/fotos/Frame 24.png" height="60px">
+                        </a>
+
+                        <a href="/html/pagina_inicial.html">
+                            <img src="/fotos/Frame 29.png" height="60px">
+                        </a>
+                    </div>
                 </section>
     </div>
 </div>
