--- a/html/pagina_inicial.html
+++ b/html/pagina_inicial.html
@@ -15,10 +15,13 @@
                 <h1>Sharebook</h1>
         </div>
         <div>
-            <input type="text" placeholder="Pesquisar...">
-            <a href="pagina_inicial.html">
-                <img src="/fotos/header/image 11.png" alt="Buscar">
-            </a>
+            <div class="navbar">
+                    <div class="search-container">
+                        <input type="text" placeholder="Pesquisar...">
+                        <button class="search-button">&#128269;</button>
+                    </div>
+            </div>
+            
         </div>
     </div>
     <div class="Sidebar">
@@ -56,17 +59,57 @@
 
             <a href="/html/view_book_pag.html">
                 <div class="square">
-                    <p>Livro</p>
+                    <img src="/fotos/view book/image 18.png">
+                    <h3 style="padding-left: 5px;">Livro de Aventura</h3>
+                    <div style="display: flex; flex-direction: row; align-items: center;">
+                        <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                        <p>Iago Cimento</p>
+                    </div>
+                    <div style="display: flex; flex-direction: row; align-items: center;">
+                        <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                        <p>Pombal - PB</p>
+                    </div>
+                    <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
                 </div>
             </a>
             <div class="square">
-                <p>Livro</p>
+                    <img src="/fotos/view book/image 18.png">
+                    <h3 style="padding-left: 5px;">Livro de Aventura</h3>
+                    <div style="display: flex; flex-direction: row; align-items: center;">
+                        <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                        <p>Iago Cimento</p>
+                    </div>
+                    <div style="display: flex; flex-direction: row; align-items: center;">
+                        <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                        <p>Pombal - PB</p>
+                    </div>
+                    <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
             </div>
             <div class="square">
-                <p>Livro</p>
+                    <img src="/fotos/view book/image 18.png">
+                    <h3 style="padding-left: 5px;">Livro de Aventura</h3>
+                    <div style="display: flex; flex-direction: row; align-items: center;">
+                        <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                        <p>Iago Cimento</p>
+                    </div>
+                    <div style="display: flex; flex-direction: row; align-items: center;">
+                        <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                        <p>Pombal - PB</p>
+                    </div>
+                    <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
             </div>
             <div class="square">
-                <p>Livro</p>
+                    <img src="/fotos/view book/image 18.png">
+                    <h3 style="padding-left: 5px;">Livro de Aventura</h3>
+                    <div style="display: flex; flex-direction: row; align-items: center;">
+                        <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                        <p>Iago Cimento</p>
+                    </div>
+                    <div style="display: flex; flex-direction: row; align-items: center;">
+                        <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                        <p>Pombal - PB</p>
+                    </div>
+                    <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
             </div>
 
         </section>
@@ -75,17 +118,25 @@
 
         <section class="items-section">
 
-            <div class="square2">
-                <p>Livro</p>
+            <div class="square2" style="background-image: url(/fotos/image\ 42.png); background-size: cover;">
+                <div>
+                    <p>Fantasia</p>
+                </div>
             </div>
-            <div class="square2">
-                <p>Livro</p>
+            <div class="square2" style="background-image: url(/fotos/section2.png); background-size: cover;">
+                <div>
+                    <p>Terror</p>
+                </div>
             </div>
-            <div class="square2">
-                <p>Livro</p>
+            <div class="square2" style="background-image: url(/fotos/section3.png); background-size: cover;">
+                <div>
+                    <p>Sci-fi</p>
+                </div>
             </div>
-            <div class="square2">
-                <p>Livro</p>
+            <div class="square2" style="background-image: url(/fotos/section4.png); background-size: cover;">
+                <div>
+                    <p>Comédia</p>
+                </div>
             </div>
 
         </section>
@@ -95,7 +146,27 @@
         <section class="items-section">
 
             <div class="square3">
-                <p>Avaliação</p>
+                <div style="display: flex; flex-direction: column; align-items: center; justify-content: flex-start; ">
+                    <div style="display: flex; flex-direction: row;">
+                        <img src="/fotos/image 30 (1).png">
+                        <div style="display: flex; flex-direction: column;">
+                            <h3>Amanda</h3>
+                            <p>Avaliação de “Livro de Aventura”</p>
+                            <h4>Data de Avaliação: 26/05/2024</h4>
+                        </div>
+                    </div>
+                    <div>
+                        <p>Esse livro me prendeu do início ao fim. A escrita é envolvente, os cenários são ricos em detalhes e a protagonista, Lyra, é uma heroína complexa e cativante. Uma fantasia sombria e poética que merece ser lida.</p>
+                    </div>
+                    <div class="avaliacao" style="display: flex; flex-direction: row; align-items: center;">
+                        <h3>Avaliação do Livro:</h3>
+                        <img src="/fotos/image 31.png" height="25px">
+                        <img src="/fotos/image 31.png" height="25px">
+                        <img src="/fotos/image 31.png" height="25px">
+                        <img src="/fotos/image 31.png" height="25px">
+                        <img src="/fotos/image 35.png" height="25px">
+                    </div>
+                </div>
             </div>
 
         </section>
