Criando a página de login

--- a/html/pagina_inicial.html
+++ b/html/pagina_inicial.html
@@ -26,7 +26,9 @@
     </div>
     <div class="Sidebar">
         <div>
-            <img src="/fotos/sidebar/Generic avatar.png" alt="Cadastrar/Login" >
+            <a href="login.html">
+                <img src="/fotos/sidebar/Generic avatar.png" alt="Cadastrar/Login" >
+            </a>
         </div>
 
         <div>
