--- a/html/pagina_inicial.html
+++ b/html/pagina_inicial.html
@@ -148,17 +148,15 @@
         <section class="items-section">
 
             <div class="square3">
-                <div style="display: flex; flex-direction: column; align-items: center; justify-content: flex-start; ">
+                <div style="display: flex; flex-direction: column; align-items: center;">
                     <div style="display: flex; flex-direction: row;">
                         <img src="/fotos/image 30 (1).png">
                         <div style="display: flex; flex-direction: column;">
                             <h3>Amanda</h3>
                             <p>Avaliação de “Livro de Aventura”</p>
                             <h4>Data de Avaliação: 26/05/2024</h4>
+                            <p>Esse livro me prendeu do início ao fim. A escrita é envolvente, os cenários são ricos em detalhes e a protagonista, Lyra, é uma heroína complexa e cativante. Uma fantasia sombria e poética que merece ser lida.</p>
                         </div>
-                    </div>
-                    <div>
-                        <p>Esse livro me prendeu do início ao fim. A escrita é envolvente, os cenários são ricos em detalhes e a protagonista, Lyra, é uma heroína complexa e cativante. Uma fantasia sombria e poética que merece ser lida.</p>
                     </div>
                     <div class="avaliacao" style="display: flex; flex-direction: row; align-items: center;">
                         <h3>Avaliação do Livro:</h3>
