--- a/html/pagina_about_us.html
+++ b/html/pagina_about_us.html
@@ -14,16 +14,18 @@
             <img src="/fotos/header/Group 2.png" alt="Image">
             <h1>Sharebook</h1>
         </div>
-        <div>
-            <input type="text" placeholder="Pesquisar...">
-            <a href="pagina_inicial.html">
-                <img src="/fotos/header/image 11.png" alt="Buscar">
-            </a>
+        <div class="navbar">
+                    <div class="search-container">
+                        <input type="text" placeholder="Pesquisar...">
+                        <button class="search-button">&#128269;</button>
+                    </div>
         </div>
     </div>
     <div class="Sidebar">
         <div>
-            <img src="/fotos/sidebar/Generic avatar.png" alt="Cadastrar/Login">
+            <a href="login.html">
+                <img src="/fotos/sidebar/Generic avatar.png" alt="Cadastrar/Login" >
+            </a>
         </div>
 
         <div>
@@ -43,7 +45,9 @@
         </div>
 
         <div>
-            <img src="/fotos/sidebar/Group 8.png" alt="Cadastrar um livro">
+            <a href="/html/cadastrar_livro.html">
+                <img src="/fotos/sidebar/Group 8.png" alt="Cadastrar um livro">
+            </a>
         </div>
     </div>
     <div class="Content">
