Carrossel da Página Inicial

--- a/html/pagina_inicial.html
+++ b/html/pagina_inicial.html
@@ -58,59 +58,100 @@
 
         <section class="items-section">
 
-            <a href="/html/view_book_pag.html">
+            <div class="carrossel">
+                <a href="/html/view_book_pag.html">
+                    <div class="square">
+                        <img src="/fotos/view book/image 18.png">
+                        <h3 style="padding-left: 5px;">Livro de Aventura</h3>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Iago Cimento</p>
+                        </div>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Pombal - PB</p>
+                        </div>
+                        <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
+                    </div>
+                </a>
                 <div class="square">
-                    <img src="/fotos/view book/image 18.png">
-                    <h3 style="padding-left: 5px;">Livro de Aventura</h3>
-                    <div style="display: flex; flex-direction: row; align-items: center;">
-                        <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
-                        <p>Iago Cimento</p>
-                    </div>
-                    <div style="display: flex; flex-direction: row; align-items: center;">
-                        <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
-                        <p>Pombal - PB</p>
-                    </div>
-                    <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
+                        <img src="/fotos/view book/image 18.png">
+                        <h3 style="padding-left: 5px;">Livro de Aventura</h3>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Iago Cimento</p>
+                        </div>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Pombal - PB</p>
+                        </div>
+                        <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
                 </div>
-            </a>
-            <div class="square">
-                    <img src="/fotos/view book/image 18.png">
-                    <h3 style="padding-left: 5px;">Livro de Aventura</h3>
-                    <div style="display: flex; flex-direction: row; align-items: center;">
-                        <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
-                        <p>Iago Cimento</p>
-                    </div>
-                    <div style="display: flex; flex-direction: row; align-items: center;">
-                        <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
-                        <p>Pombal - PB</p>
-                    </div>
-                    <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
-            </div>
-            <div class="square">
-                    <img src="/fotos/view book/image 18.png">
-                    <h3 style="padding-left: 5px;">Livro de Aventura</h3>
-                    <div style="display: flex; flex-direction: row; align-items: center;">
-                        <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
-                        <p>Iago Cimento</p>
-                    </div>
-                    <div style="display: flex; flex-direction: row; align-items: center;">
-                        <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
-                        <p>Pombal - PB</p>
-                    </div>
-                    <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
-            </div>
-            <div class="square">
-                    <img src="/fotos/view book/image 18.png">
-                    <h3 style="padding-left: 5px;">Livro de Aventura</h3>
-                    <div style="display: flex; flex-direction: row; align-items: center;">
-                        <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
-                        <p>Iago Cimento</p>
-                    </div>
-                    <div style="display: flex; flex-direction: row; align-items: center;">
-                        <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
-                        <p>Pombal - PB</p>
-                    </div>
-                    <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
+                <div class="square">
+                        <img src="/fotos/view book/image 18.png">
+                        <h3 style="padding-left: 5px;">Livro de Aventura</h3>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Iago Cimento</p>
+                        </div>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Pombal - PB</p>
+                        </div>
+                        <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
+                </div>
+                <div class="square">
+                        <img src="/fotos/view book/image 18.png">
+                        <h3 style="padding-left: 5px;">Livro de Aventura</h3>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Iago Cimento</p>
+                        </div>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Pombal - PB</p>
+                        </div>
+                        <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
+                </div>
+                <div class="square">
+                        <img src="/fotos/view book/image 18.png">
+                        <h3 style="padding-left: 5px;">Livro de Aventura</h3>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Iago Cimento</p>
+                        </div>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Pombal - PB</p>
+                        </div>
+                        <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
+                </div>
+                <div class="square">
+                        <img src="/fotos/view book/image 18.png">
+                        <h3 style="padding-left: 5px;">Livro de Aventura</h3>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Iago Cimento</p>
+                        </div>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Pombal - PB</p>
+                        </div>
+                        <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
+                </div>
+                <div class="square">
+                        <img src="/fotos/view book/image 18.png">
+                        <h3 style="padding-left: 5px;">Livro de Aventura</h3>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 19.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Iago Cimento</p>
+                        </div>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <img src="/fotos/view book/image 21.png" height="20px" style="padding-left: 5px; padding-right: 5px;">
+                            <p>Pombal - PB</p>
+                        </div>
+                        <img src="/fotos/view book/Frame 24.png" style="padding: 10px;" height="35px" width="90%">
+                </div>
             </div>
 
         </section>
