Script do Login

--- a/html/login.html
+++ b/html/login.html
@@ -38,19 +38,19 @@
 
                     <br>
 
-                    <button type="reset">Apagar</button>
+                    <button id="botao" type="reset">Apagar</button>
                 </div>
                 <div style="display: flex; flex-direction: column; padding-top: 50px; align-items: center;">
 
-                    <a href="pagina_inicial.html">
+                    <a class="disable" id="login_google" href="pagina_inicial.html">
                         <img src="/fotos/Login/Frame 38.png">
                     </a>
 
-                    <a href="pagina_inicial.html">
+                    <a class="disable" id="login_facebook" href="pagina_inicial.html">
                         <img src="/fotos/Login/Frame 39.png">
                     </a>
 
-                    <a href="pagina_inicial.html">
+                    <a class="disable" id="login" href="pagina_inicial.html">
                         <img src="/fotos/Login/Frame 40.png">
                     </a>
 
@@ -64,6 +64,8 @@
             <br><br>
         </form>
     </fieldset>
+    <script src="/scripts/login_script.js"></script>
 
+    
 </body>
 </html>
