Alternative Texts em Login e Inicio

--- a/html/login - Copia.html
+++ b/html/login - Copia.html
@@ -43,15 +43,15 @@
                 <div style="display: flex; flex-direction: column; padding-top: 50px; align-items: center;">
 
                     <a class="disable" id="login_google" href="pagina_inicial.html">
-                        <img src="/fotos/Login/Frame 38.png">
+                        <img src="/fotos/Login/Frame 38.png" alt="Login com o Google">
                     </a>
 
                     <a class="disable" id="login_facebook" href="pagina_inicial.html">
-                        <img src="/fotos/Login/Frame 39.png">
+                        <img src="/fotos/Login/Frame 39.png" alt="Login com o Facebook">
                     </a>
 
                     <a class="disable" id="login" href="pagina_inicial.html">
-                        <img src="/fotos/Login/Frame 40.png">
+                        <img src="/fotos/Login/Frame 40.png" alt="Login">
                     </a>
 
                     <p style="text-decoration: underline;">Não possui uma conta?</p>
