--- a/html/favorites_pag.html
+++ b/html/favorites_pag.html
@@ -56,18 +56,18 @@
         <section style="padding-bottom: 15px;">
             <fieldset>
                 <div style="display: flex; flex-direction: row;">
-                    <img src="/fotos/view book/image 18.png" height="100px">
+                    <img src="/fotos/view book/image 18.png" alt="Foto do livro"  height="100px">
                     <div class="book_fav">
                         <h3>Livro de Aventura</h3>
                         <div class="outro">
                             <p>Proprietario do livro:</p>
-                            <img src="/fotos/view book/image 19.png" height="20px">
+                            <img src="/fotos/view book/image 19.png" alt="icon user" height="20px">
                             <p>José da Silva</p>
                         </div>
 
                         <div class="outro">
                             <p>Localização do Dono:</p>
-                            <img src="/fotos/view book/image 21.png" height="20px">
+                            <img src="/fotos/view book/image 21.png" alt="icon local" height="20px">
                             <p>Patos - PB</p>
                         </div>
 
@@ -85,18 +85,18 @@
         <section>
             <fieldset>
                 <div style="display: flex; flex-direction: row;">
-                    <img src="/fotos/view book/image 18.png" height="100px">
+                    <img src="/fotos/view book/image 18.png" alt="Foto do livro" height="100px">
                     <div class="book_fav">
                         <h3>Livro de Aventura</h3>
                         <div class="outro">
                             <p>Proprietario do livro:</p>
-                            <img src="/fotos/view book/image 19.png" height="20px">
+                            <img src="/fotos/view book/image 19.png" alt="icon user" height="20px">
                             <p>José da Silva</p>
                         </div>
 
                         <div class="outro">
                             <p>Localização do Dono:</p>
-                            <img src="/fotos/view book/image 21.png" height="20px">
+                            <img src="/fotos/view book/image 21.png" alt="icon local" height="20px">
                             <p>Patos - PB</p>
                         </div>
 
